# transbank-pos-sdk-c

./: .editorconfig  .gitignore  CMakeLists.txt  Changelog.md  Makefile  README.md  appveyor.yml  sonar-project.properties  version.rc
.github/workflows/: build.yml
examples/: MensajesEjemplo.md  cancellation.c  close.c  close_register.c  common.c  common.h  last_sale.c  list_ports.c  load_keys.c  main.c  normal_mode.c  polling.c  refund.c  register_close.c  sale.c  sales_detail.c  totals.c
src/: hex_codes.h  main.c  message.h  responses.h  tbk_baud_rate.h  transbank.c  transbank.h  transbank.i  transbank_dotnet.i  transbank_serial_utils.c  transbank_serial_utils.h  transbank_wrap.c
test/: test_serial.c  test_transbank.c  test_transbank_serial_utils.c
